--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,86 @@
+html {
+  box-sizing: content-box;
+}
+
 html, body {
   width: 100%;
   height: 100%;
 }
 
-html {
-  box-sizing: border-box;
+a {
+  color: #FDCC52;
+  -webkit-transition: all .35s;
+  -moz-transition: all .35s;
+  transition: all .35s;
+}
+
+a:hover, a:focus {
+  color: #fcbd20;
 }
 
 .wrapperHome {
-  height: 100%;
-  background: #457fca;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #5691c8, #457fca); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: url("../images/keen_img.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
+  background-color: #457fca;
+  background-blend-mode: overlay;
   overflow: hidden;
 }
 
-h2 {
-  color: white;
-  cursor: default;
-  display: block;
-  text-align: center;
-  margin: 10%;
+
+/*======================================
+=            NAVIGATION STYLES         =
+======================================*/
+
+.navbar-brand {
+  font-family: "Shrikhand", Arial, sans-serif;
+  font-size: 1.8em;
 }
 
-.wrapperAbout {
-  height: 100%;
-  background: #1CD8D2;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #93EDC7, #1CD8D2);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #93EDC7, #1CD8D2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
+ul li, ul li a {
+  display: inline-block;
+  margin-left: 7px;
+  margin-right: 7px;
+  overflow: hidden;
+}
+
+.wrapperBG {
+  margin-top: 9%;
+  margin-left: 3%;
+  padding-bottom: 50px;
+}
+
+h1.keenHeader {
+  color: white;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 'thin';
+  font-size: 6em;
+  letter-spacing: 10px;
+  text-shadow: 2px 2px 8px #3d3d3d;
+  cursor: default;
+}
+
+h2.keenHeader2 {
+  color: white;
+  font-family: 'Shrikhand', sans-serif;
+  font-size: 6em;
+  margin-right: 20%;
+  cursor: default;
+}
+
+.wrapperContact {
+  height: 70%;
+  background-color: white;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow: hidden;
 }
