--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ ul {
 
 ul li, ul li a {
   margin: 0 7px;
-  display: inline-block;
+  display: inline;
 }
 
 /*======================================
@@ -171,6 +171,7 @@ fieldset {
 ======================================*/
 
 footer {
+  width: 100%;
   background: #0E0E0E;
   box-shadow: 0 0 9px rgba(0, 0, 0, 0.5);
   padding: 1.5%;
@@ -180,4 +181,32 @@ footer {
 
 p.keenFooter {
   font: 1.7em "Shrikhand", sans-serif;
+  cursor: default;
+}
+
+ul.social-icons {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	margin-top: 10px;
+  cursor: default;
+}
+
+ul.social-icons li {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+ul.social-icons li a {
+	width: 40px;
+	height: 40px;
+	display: inline-block;
+	border: 1px solid #FFFFFF;
+	border-radius: 50%;
+	line-height: 40px;
+	transition: all 1s;
+}
+
+ul.social-icons li a:hover {
+	background-color: #FFFFFF;
 }
