--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,6 @@ a {
   text-decoration: none;
 }
 
-.wrapperMain {
-  background: #1488CC;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: cover;
-}
-
 .wrapperHome {
   background: url("../images/keen_img.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -32,7 +25,43 @@ a {
   overflow: hidden;
 }
 
+.wrapperListings {
+  background: #457fca;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
+  height: 100%;
+  color: white;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
 
+.wrapperListings a {
+  color: black;
+  font-weight: bolder;
+}
+
+.wrapperAddListings {
+  background: #F9F9F9;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:         inset 0 0 10px #000000;
+  height: 100%;
+  padding: 20px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.wrapperAddListings a {
+  background-color: #f63;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.wrapperAddListings a:hover { background-color: #ff9933; }
 /*======================================
 =            NAVIGATION STYLES         =
 ======================================*/
@@ -42,11 +71,14 @@ a {
   font-size: 2em;
 }
 
-ul {
+.categoryList {
   list-style-type: none;
   margin: 0 7px;
   padding: 0;
   display: inline;
+  margin-top: 15px;
+  font-size: 1.5rem;
+  word-spacing: 30px;
 }
 
 /*======================================
@@ -168,6 +200,10 @@ fieldset {
 }
 :-ms-input-placeholder {
  color:#888;
+}
+
+textarea {
+  resize: none;
 }
 
 /*======================================
